# sim808

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  changelog.md
include/Sim808/: CommandGateway.hpp  DefaultCommandGateway.hpp  ResultCode.hpp  Sim808.hpp
include/Sim808/ShortMessages/: BaseTypes.hpp  DeletionRequestType.hpp  Message.hpp  MessageStorageType.hpp  MessageTransferType.hpp  Service.hpp
include/Sim808/Utility/: StringUtility.hpp
src/: CMakeLists.txt
src/Sim808/: DefaultCommandGateway.cpp  ResultCode.cpp  Sim808.cpp
src/Sim808/ShortMessages/: DeletionRequestType.cpp  Message.cpp  MessageStorageType.cpp  Service.cpp
src/Sim808/Utility/: StringUtility.cpp
tests/src/: CMakeLists.txt  main.cpp
tests/src/Sim808/ShortMessages/: Message.Test.cpp
tools/: CMakeLists.txt
tools/CommandLineTool/: CMakeLists.txt
tools/CommandLineTool/include/Sim808/CommandLineTool/: CommandDispatcher.hpp
tools/CommandLineTool/libs/Core/include/Sim808/CommandLineTool/: Utility.hpp
tools/CommandLineTool/libs/Core/src/: CMakeLists.txt
tools/CommandLineTool/libs/Core/src/Sim808/CommandLineTool/: Utility.cpp
tools/CommandLineTool/src/: CMakeLists.txt  main.cpp
tools/CommandLineTool/src/Sim808/CommandLineTool/: CommandDispatcher.cpp
tools/CommandLineTool/tests/src/: CMakeLists.txt  main.cpp
tools/CommandLineTool/tests/src/Sim808/CommandLineTool/: Utility.Test.cpp
